# ECE1508-Deep-Generative-Models

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: classifier.yaml  colab_smoke_classifier.yaml  colab_smoke_music.yaml  inference.yaml  inference_colab_smoke.yaml  music.yaml
docs/superpowers/plans/: 2026-06-22-musemotion-implementation.md
docs/superpowers/specs/: 2026-06-22-musemotion-design.md
figures/: musemotion_classifier_real_training_history.csv  musemotion_music_real_training_history.csv
figures/results-training-chart/: musemotion_real_training_summary.csv
models/real_training/: README.md
models/real_training/classifier_tiny_bert_42epoch/: config.json  label_mapping.json  metrics.json  trainer_log_history.json
models/real_training/music_transformer_42epoch/: best.pt  last.pt  training_history.json
notebooks/: musemotion_colab.ipynb
samples/: random_piano_seed_260625.json  random_piano_seed_260625.mid  random_piano_seed_260625_model.json
src/musemotion/: __init__.py  config.py  emotions.py
src/musemotion/cli/: __init__.py  download_emopia.py  generate.py  prepare_emopia.py  train_classifier.py  train_generator.py
src/musemotion/data/: goemotions.py
src/musemotion/frontend/: __init__.py  app.py
src/musemotion/inference/: __init__.py  pipeline.py
src/musemotion/models/: __init__.py  music_transformer.py
tests/: test_classifier_config.py  test_cli_imports.py  test_config.py  test_emopia_download.py  test_emotions.py  test_inference.py  test_music_model.py  test_random_generator.py  test_tokenizer.py
(+9 files in other folders)
